--- a/amazon.html
+++ b/amazon.html
@@ -7,5 +7,9 @@
 </head>
 <body>
      <h1>biswajit sahu the way of porsonal branding </h1>
+     <nav style="background-color: palegreen; display: flex;"><div class=""><a href="">a</a></div>
+        <div class=""><a href="">a</a></div>
+        <div class=""><a href="">a</a></div>
+        <div class=""><a href="">a</a></div></nav>
 </body>
 </html>
